various code improvements including
1. more use of record types
2. use correctly-wildcarded generic type in getXmlMappingBindings()
3. use safe casts in equals() overrides
4. use Objects.hash()
5. deprecated forRemoval an unused class
6. etc.